kubernetes-networks/canary/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "Version"
    nginx.ingress.kubernetes.io/canary-by-header-pattern: "v2"
  name: nginx-canary
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-v2
            port: 
              number: 80
